--- a/src/less/index.less
+++ b/src/less/index.less
@@ -8,6 +8,7 @@
 @import "./components/header.less";
 @import "./components/box.less";
 @import "./components/links.less";
+@import "./components/meny.less";
 @import "./components/alternativer.less";
 @import "./components/panel.less";
 @import "./components/footer-info.less";
