--- a/src/less/components/app.less
+++ b/src/less/components/app.less
@@ -1,7 +1,7 @@
 @link-color: #4a90e2;
 
 body {
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
   color: #3e3832;
   background-color: #e9e7e7;
 
@@ -17,6 +17,7 @@ body {
 main {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 .Content {
