--- a/src/less/components/alternativer.less
+++ b/src/less/components/alternativer.less
@@ -2,14 +2,7 @@
 @iconwidth: 15%;
 
 .AlternativesBox {
+  padding: 2rem 0 2rem 0;
   width: 100%;
   min-height: 200px;
-
-  h1 {
-    width: 50vw;
-  }
-
-  @media @tablet {
-    width: 90vw;
-  }
 }
