--- a/src/less/components/box.less
+++ b/src/less/components/box.less
@@ -1,213 +1,165 @@
-@iconwidth: 15%;
-
-.BoxContainer {
-  width: 100%;
-  display: flex;
-  flex-flow: column;
-  align-items: center;
-}
-
-.BoxWithHeader {
-  width: 100%;
-  min-height: 200px;
-
-  h1 {
-    margin-left: @iconwidth;
+.box {
+  margin: 3rem 0 3rem 0;
+  @media @mobile {
+    margin: 1rem 0 1rem 0;
   }
 
-  @media @tablet {
-    width: 90vw;
-  }
-}
-
-.InfoBox {
-  padding: 2em;
-  background-color: #ffe5c2;
-  display: inline-block;
-  width: @boxwidth;
-  margin-bottom: 2em;
-
-  hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #ff9100;
-    padding: 0;
-  }
-
-  h2 {
+  &__header {
+    display: flex;
+    flex-flow: column;
+    padding: 0 1.5rem 0 1.5rem;
+    align-items: center;
     text-align: center;
-    margin-bottom: 4rem;
   }
 
-  .info-content {
-    text-align: center;
-    margin-bottom: 2rem;
-  }
-}
-
-.Box {
-  padding: 2em;
-  background-color: white;
-  display: flex;
-  flex-flow: column;
-  align-items: center;
-  width: 100%;
-
-  .information-circle {
-    float: right;
-    padding: 0;
-    border: none;
-    background: none;
+  &__header > * {
+    margin: 1rem;
   }
 
-  ul.list-column-1 {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    list-style-type: none;
-
-    li {
-      padding: 1rem;
-      flex-grow: 1;
-      width: 100%;
-
-      .title {
-        font-weight: bold;
-        display: block;
-        white-space: nowrap;
-        text-overflow: ellipsis;
-        overflow: hidden;
-      }
+  &__icon {
+    @media @mobile {
+      visibility: hidden;
     }
   }
 
-  ul.list-column-2 {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    list-style-type: none;
+  &__linje-smal {
+    border: 1px solid black;
+    width: 15%;
+  }
 
-    li {
-      padding: 1rem;
-      flex-grow: 1;
-      width: 50%;
+  &__linje-bred {
+    border: 0.5px solid black;
+    width: 60%;
+    margin-top: 2rem;
+  }
 
-      @media @tablet {
+  &__content {
+
+    ul.list-column-1 {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      list-style-type: none;
+
+      li {
+        padding: 1rem;
+        flex-grow: 1;
         width: 100%;
+
+        .title {
+          font-weight: bold;
+          display: block;
+          white-space: nowrap;
+          text-overflow: ellipsis;
+          overflow: hidden;
+        }
+      }
+    }
+
+    ul.list-column-2 {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      list-style-type: none;
+
+      li {
+        padding: 1rem;
+        flex-grow: 1;
+        width: 40%;
+
+        @media @tablet {
+          width: 100%;
+        }
+
+        .title {
+          font-weight: bold;
+          display: block;
+          white-space: nowrap;
+          text-overflow: ellipsis;
+          overflow: hidden;
+        }
+      }
+    }
+
+    ul.list-column-2.address-columns {
+      li:nth-child(1) {
+        order: 1;
       }
 
-      .title {
-        font-weight: bold;
-        display: block;
-        white-space: nowrap;
-        text-overflow: ellipsis;
-        overflow: hidden;
+      li:nth-child(2) {
+        order: 3;
+      }
+
+      li:nth-child(3) {
+        order: 5;
+      }
+
+      li:nth-child(4) {
+        order: 2;
+      }
+
+      li:nth-child(5) {
+        order: 4;
+      }
+    }
+
+    ul.list-column-3 {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      list-style-type: none;
+
+      li {
+        padding: 1rem;
+        flex-grow: 1;
+        width: 40%;
+
+        @media @tablet {
+          width: 100%;
+        }
+
+        .title {
+          font-weight: bold;
+          display: block;
+          white-space: nowrap;
+          text-overflow: ellipsis;
+          overflow: hidden;
+        }
+      }
+    }
+
+    ul.list-column-4 {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      list-style-type: none;
+
+      li {
+        padding: 1rem;
+        flex-grow: 1;
+        width: 20%;
+
+        @media @tablet {
+          width: 100%;
+        }
+
+        .title {
+          font-weight: bold;
+          display: block;
+          white-space: nowrap;
+          text-overflow: ellipsis;
+          overflow: hidden;
+        }
       }
     }
   }
-
-  ul.list-column-2.address-columns {
-    li:nth-child(1) {
-      order: 1;
-    }
-
-    li:nth-child(2) {
-      order: 3;
-    }
-
-    li:nth-child(3) {
-      order: 5;
-    }
-
-    li:nth-child(4) {
-      order: 2;
-    }
-
-    li:nth-child(5) {
-      order: 4;
-    }
-  }
-
-  ul.list-column-3 {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    list-style-type: none;
-
-    li {
-      padding: 1rem;
-      flex-grow: 1;
-      width: 50%;
-
-      @media @tablet {
-        width: 100%;
-      }
-
-      .title {
-        font-weight: bold;
-        display: block;
-        white-space: nowrap;
-        text-overflow: ellipsis;
-        overflow: hidden;
-      }
-    }
-  }
-
-  ul.list-column-4 {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    list-style-type: none;
-
-    li {
-      padding: 1rem;
-      flex-grow: 1;
-      width: 25%;
-
-      @media @tablet {
-        width: 100%;
-      }
-
-      .title {
-        font-weight: bold;
-        display: block;
-        white-space: nowrap;
-        text-overflow: ellipsis;
-        overflow: hidden;
-      }
-    }
-  }
-}
-
-.box-bottom-margin {
-  margin-bottom: 5em;
-}
-
-.box-bottom-margin-small {
-  margin-bottom: 1.5em;
 }
 
 .box-footer {
+  text-align: left;
   width: 40%;
   font-style: italic;
   margin-top: 2rem;
 }
 
-.box-icon {
-  vertical-align: top;
 
-  @media @tablet {
-    visibility: hidden;
-  }
-}
-
-.icon-box-wrapper {
-  display: flex;
-  align-items: flex-start;
-  justify-content: space-between;
-}
-
-.icon-box-margin {
-  margin-left: @iconwidth;
-}
