--- a/src/less/index.less
+++ b/src/less/index.less
@@ -2,6 +2,8 @@
 @mobile: ~'only screen and (max-width: 420px)';
 
 @import '~nav-frontend-typografi-style';
+@import '~nav-frontend-ekspanderbartpanel-style';
+@import '~nav-frontend-paneler-style';
 
 @import './components/app.less';
 @import './components/header.less';
