Gjør meny sticky

--- a/src/less/components/meny.less
+++ b/src/less/components/meny.less
@@ -2,13 +2,13 @@
 .meny-filler {
   min-width: 200px;
 
-  @media @tablet {
+  @media only screen and (max-width: 1080px) {
     display: none;
   }
 }
 
 .meny-wrapper {
-  margin: 10em 2em 2em 2em;
+  margin: 23em 2em 2em 2em;
   position: relative;
 }
 
@@ -18,10 +18,11 @@
   height: 414px;
   border-radius: 4px;
   background-color: #ffffff;
+  top: 3em;
 
   ul {
     list-style: none;
-    padding: 2em 0em 1em 1em;
+    padding: 3em 0em 1em 1em;
 
     li {
       padding-top: 1.5em;
