Refaktor css iht bem. Mindre luft i header

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -137,58 +137,61 @@ main {
   width: 100%;
   max-width: 800px;
 }
-.Header {
-  display: flex;
+.header {
   position: relative;
-  flex-direction: column;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   background-color: white;
 }
-.Header h1 {
+.header h1 {
   font-weight: bold;
   margin-bottom: 0;
 }
 @media only screen and (max-width: 959px) {
-  .Header {
+  .header {
     padding: 3rem 2rem 0 2rem;
     margin: 4rem 0 2rem 0;
     border-radius: 0.5em;
+    flex-direction: column;
   }
 }
 @media only screen and (min-width: 959px) {
-  .Header {
-    padding: 2rem 2rem 0 2rem;
+  .header {
+    padding: 1rem 4rem 0 4rem;
     margin: 2rem 0 2rem 0;
     border-radius: 8px;
     justify-content: flex-end;
-    padding: 2rem 4rem 0 4rem;
-    min-height: 260px;
   }
 }
-.Header .header-content {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+.header__content {
+  padding: 2rem 0 3rem 0;
 }
-.Header .header-content .header-content-wrapper {
-  padding: 2rem 0 4rem 0;
-}
-.Header .header-content .header-intro {
+.header__content-intro {
   padding: 2rem 0 1rem 0;
 }
-.Header .header-content .header-description {
+.header__content-description {
   font-size: 1.2rem;
   font-weight: normal;
 }
-@media only screen and (max-width: 959px) {
-  .Header .header-content {
-    display: flex;
-  }
-}
-.Header .header-icon-mobile {
+.header__icon-mobile {
   height: 6em;
   width: auto;
 }
-.Header .header-icon-mobile-circle {
+.header__icon-mobile-container {
+  width: 100%;
+  position: absolute;
+  display: none;
+  top: -3.5em;
+  left: 0;
+}
+@media only screen and (max-width: 959px) {
+  .header__icon-mobile-container {
+    display: flex;
+    justify-content: center;
+  }
+}
+.header__icon-mobile-circle {
   align-items: flex-end;
   justify-content: center;
   background: #c6c2bf;
@@ -199,24 +202,11 @@ main {
   height: 7em;
   width: 7em;
 }
-.Header .header-icon-mobile-container {
-  width: 100%;
-  position: absolute;
-  display: none;
-  top: -3.5em;
-  left: 0;
-}
-@media only screen and (max-width: 959px) {
-  .Header .header-icon-mobile-container {
-    display: flex;
-    justify-content: center;
-  }
-}
-.Header .header-icon-desktop {
+.header__icon-desktop {
   margin: auto 1rem 0 1rem;
 }
 @media only screen and (max-width: 959px) {
-  .Header .header-icon-desktop {
+  .header__icon-desktop {
     display: none;
   }
 }
