Legg til smooth scroll effekt for moderne nettlesere

--- a/src/less/components/app.less
+++ b/src/less/components/app.less
@@ -1,5 +1,9 @@
 @link-color: #4a90e2;
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: "Source Sans Pro", sans-serif;
   color: #3e3832;
