--- a/src/less/components/box.less
+++ b/src/less/components/box.less
@@ -162,4 +162,46 @@
   margin-top: 2rem;
 }
 
+//midlertidig inntil avklaring
+.information-circle {
+  float: right;
+  padding: 0;
+  border: none;
+  background: none;
+}
+
+.InfoBox {
+  padding: 2em;
+  background-color: #ffe5c2;
+  display: inline-block;
+  width: @boxwidth;
+  margin-bottom: 2em;
+
+  hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #ff9100;
+    padding: 0;
+  }
+
+  h2 {
+    text-align: center;
+    margin-bottom: 4rem;
+  }
+
+  .info-content {
+    text-align: center;
+    margin-bottom: 2rem;
+  }
+}
+
+.BoxContainer {
+  width: 100%;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+}
+
+
 
