Legg menyen ved siden av banneren

--- a/src/less/components/meny.less
+++ b/src/less/components/meny.less
@@ -3,7 +3,7 @@
   position: sticky;
   border-radius: 4px;
   background-color: #ffffff;
-  top: 3em;
+  top: 2em;
 
   &__wrapper,
   &__filler {
@@ -15,13 +15,13 @@
   }
 
   &__wrapper {
-    margin: 23em 2em 2em 2em;
+    margin: 1rem 2em 2em 2em;
     position: relative;
   }
 
   ul {
     list-style: none;
-    padding: 3em 1em 3em 1em;
+    padding: 2em 1em 2em 1em;
     display: flex;
     flex-direction: column;
     height: 100%;
