Legg til spinner mens applikasjonen kaller backend

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -2,6 +2,7 @@
 @tablet: ~"only screen and (max-width: 959px)";
 @mobile: ~"only screen and (max-width: 420px)";
 
+@import "~nav-frontend-spinner-style";
 @import "~nav-frontend-typografi-style";
 
 @import "./components/app.less";
