--- a/src/less/components/app.less
+++ b/src/less/components/app.less
@@ -28,3 +28,10 @@ main {
   width: 100%;
   max-width: 800px;
 }
+
+.spinner-wrapper {
+  width: 100%;
+  margin: 4em 0;
+  display: flex;
+  justify-content: center;
+}
