Fjern generell font- og lenkestyling og legg på NAVs font- og lenkestyling

--- a/src/less/components/app.less
+++ b/src/less/components/app.less
@@ -5,13 +5,7 @@ html {
 }
 
 body {
-  font-family: "Source Sans Pro", sans-serif;
-  color: #3e3832;
-  background-color: #e9e7e7;
-
-  a {
-    color: @link-color;
-  }
+  background-color: @navLysGra;
 
   .capitalize {
     text-transform: capitalize;
