--- a/src/less/index.less
+++ b/src/less/index.less
@@ -3,6 +3,7 @@
 @mobile: ~"only screen and (max-width: 420px)";
 
 @import "~nav-frontend-typografi-style";
+@import "~nav-frontend-lenker-style";
 
 @import "./components/app.less";
 @import "./components/header.less";
