Maks bredde og høyde på boks-ikoner

--- a/src/less/components/box.less
+++ b/src/less/components/box.less
@@ -17,6 +17,8 @@
   }
 
   &__icon {
+    max-width: 5em;
+    max-height: 5em;
     @media @mobile {
       visibility: hidden;
     }
@@ -34,7 +36,6 @@
   }
 
   &__content {
-
     ul.list-column-1 {
       display: flex;
       flex-direction: row;
@@ -202,4 +203,3 @@
   flex-flow: column;
   align-items: center;
 }
-
