Senk delay på api-mock. Endre design på li-elementer under bokser

--- a/src/less/components/box.less
+++ b/src/less/components/box.less
@@ -1,5 +1,8 @@
 .box {
-  margin: 3rem 0 3rem 0;
+  @media @desktop {
+    margin: 3rem 0 3rem 0;
+    padding: 2rem 4rem;
+  }
   @media @mobile {
     margin: 1rem 0 1rem 0;
   }
@@ -7,13 +10,12 @@
   &__header {
     display: flex;
     flex-flow: column;
-    padding: 0 1.5rem 0 1.5rem;
     align-items: center;
     text-align: center;
   }
 
   &__header > * {
-    margin: 1rem;
+    margin: 1rem 0;
   }
 
   &__icon {
@@ -36,48 +38,39 @@
   }
 
   &__content {
-    ul.list-column-1 {
+    ul {
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
       list-style-type: none;
+      padding-left: 0;
+    }
 
+    li {
+      flex-grow: 1;
+      box-sizing: border-box;
+      padding: 1rem 2rem 1rem 0rem;
+
+      .title {
+        font-weight: bold;
+        display: block;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+      }
+    }
+
+    ul.list-column-1 {
       li {
-        padding: 1rem;
-        flex-grow: 1;
         width: 100%;
-
-        .title {
-          font-weight: bold;
-          display: block;
-          white-space: nowrap;
-          text-overflow: ellipsis;
-          overflow: hidden;
-        }
       }
     }
 
     ul.list-column-2 {
-      display: flex;
-      flex-direction: row;
-      flex-wrap: wrap;
-      list-style-type: none;
-
       li {
-        padding: 1rem;
-        flex-grow: 1;
-        width: 40%;
-
+        width: 50%;
         @media @tablet {
           width: 100%;
-        }
-
-        .title {
-          font-weight: bold;
-          display: block;
-          white-space: nowrap;
-          text-overflow: ellipsis;
-          overflow: hidden;
         }
       }
     }
@@ -105,51 +98,19 @@
     }
 
     ul.list-column-3 {
-      display: flex;
-      flex-direction: row;
-      flex-wrap: wrap;
-      list-style-type: none;
-
       li {
-        padding: 1rem;
-        flex-grow: 1;
-        width: 40%;
-
+        width: 33%;
         @media @tablet {
           width: 100%;
-        }
-
-        .title {
-          font-weight: bold;
-          display: block;
-          white-space: nowrap;
-          text-overflow: ellipsis;
-          overflow: hidden;
         }
       }
     }
 
     ul.list-column-4 {
-      display: flex;
-      flex-direction: row;
-      flex-wrap: wrap;
-      list-style-type: none;
-
       li {
-        padding: 1rem;
-        flex-grow: 1;
-        width: 20%;
-
+        width: 25%;
         @media @tablet {
           width: 100%;
-        }
-
-        .title {
-          font-weight: bold;
-          display: block;
-          white-space: nowrap;
-          text-overflow: ellipsis;
-          overflow: hidden;
         }
       }
     }
