--- a/src/less/components/box.less
+++ b/src/less/components/box.less
@@ -3,7 +3,7 @@
     margin: 3rem 0 3rem 0;
     padding: 2rem 4rem;
   }
-  @media @mobile {
+  @media @tablet {
     margin: 1rem 0 1rem 0;
   }
 
@@ -60,18 +60,14 @@
       }
     }
 
-    ul.list-column-1 {
-      li {
-        width: 100%;
-      }
+    ul.list-column-1 li {
+      width: 100%;
     }
 
-    ul.list-column-2 {
-      li {
-        width: 50%;
-        @media @tablet {
-          width: 100%;
-        }
+    ul.list-column-2 li {
+      width: 50%;
+      @media @mobile {
+        width: 100%;
       }
     }
 
@@ -97,21 +93,17 @@
       }
     }
 
-    ul.list-column-3 {
-      li {
-        width: 33%;
-        @media @tablet {
-          width: 100%;
-        }
+    ul.list-column-3 li {
+      width: 33%;
+      @media @mobile {
+        width: 100%;
       }
     }
 
-    ul.list-column-4 {
-      li {
-        width: 25%;
-        @media @tablet {
-          width: 100%;
-        }
+    ul.list-column-4 li {
+      width: 25%;
+      @media @mobile {
+        width: 100%;
       }
     }
   }
