La til brødsmulesti

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -18,3 +18,4 @@
 @import "./components/footer-info.less";
 @import "./components/alertstripe.less";
 @import "./components/meny.less";
+@import "./components/brodsmulesti.less";
