--- a/src/less/components/brodsmulesti.less
+++ b/src/less/components/brodsmulesti.less
@@ -7,6 +7,8 @@
   font-size: 1rem;
   line-height: 1.375rem;
   font-weight: 400;
+  margin: 0.5rem 0;
+
   &__account {
     width: 30px;
     height: 30px;
