--- a/src/less/index.less
+++ b/src/less/index.less
@@ -9,6 +9,7 @@
 @import "~nav-frontend-paneler-style";
 @import "~nav-frontend-lenker-style";
 
+@import "./components/adresse.less";
 @import "./components/app.less";
 @import "./components/header.less";
 @import "./components/box.less";
