--- a/src/less/components/box.less
+++ b/src/less/components/box.less
@@ -122,11 +122,11 @@
   background: none;
 }
 
-.InfoBox {
+.infobox {
   padding: 2em;
   background-color: #ffe5c2;
   display: inline-block;
-  width: @boxwidth;
+  border-radius: 4px;
   margin-bottom: 2em;
 
   hr {
@@ -145,6 +145,43 @@
   .info-content {
     text-align: center;
     margin-bottom: 2rem;
+  }
+}
+
+.linkbox {
+  &__container {
+    display: flex;
+    flex-flow: row;
+    background: white;
+    margin: 1rem 0;
+
+    @media @tablet {
+      padding: 1.5rem 1rem;
+    }
+
+    @media @desktop {
+      padding: 2rem 4rem;
+    }
+  }
+
+  &__icon {
+    width: 4rem;
+    height: 4rem;
+  }
+
+  &__icon-container {
+    display: flex;
+    vertical-align: center;
+    justify-content: center;
+  }
+
+  &__content {
+    @media @tablet {
+      padding: 0 3rem;
+    }
+    @media @desktop {
+      padding: 0 4rem;
+    }
   }
 }
 
