Flytt ikonet til venstre. Endre marger

--- a/src/less/components/app.less
+++ b/src/less/components/app.less
@@ -16,7 +16,14 @@ body {
 main {
   display: flex;
   justify-content: center;
-  flex-wrap: wrap;
+  align-items: center;
+  flex-direction: column;
+}
+
+.sidetittel__container {
+  padding: 2rem 0;
+  display: flex;
+  justify-content: center;
 }
 
 .Content {
