--- a/src/less/components/box.less
+++ b/src/less/components/box.less
@@ -1,30 +1,34 @@
 .box {
   @media @desktop {
     margin: 3rem 0 3rem 0;
-    padding: 2rem 4rem;
+    padding: 2rem 3rem;
+    display: flex;
   }
+
   @media @tablet {
     margin: 1rem 0 1rem 0;
+  }
+
+  &__content-container {
+    padding: 0 1.5rem;
   }
 
   &__header {
     display: flex;
     flex-flow: column;
-    align-items: center;
-    text-align: center;
+    padding: 1rem 0 0 0;
   }
 
   &__header > * {
-    margin: 1rem 0;
+    margin: 0.4rem 0;
   }
-
   &__ingress {
     max-width: 100%;
   }
 
   &__icon {
-    max-width: 5em;
-    max-height: 5em;
+    width: 4rem;
+    height: 4rem;
     @media @mobile {
       visibility: hidden;
     }
@@ -37,7 +41,7 @@
 
   &__linje-bred {
     border: 0.5px solid black;
-    width: 60%;
+    width: 75%;
     margin-top: 2rem;
   }
 
@@ -164,19 +168,8 @@
     }
 
     @media @desktop {
-      padding: 2rem 4rem;
+      padding: 2rem 3rem;
     }
-  }
-
-  &__icon {
-    width: 4rem;
-    height: 4rem;
-  }
-
-  &__icon-container {
-    display: flex;
-    vertical-align: center;
-    justify-content: center;
   }
 
   &__content {
@@ -184,7 +177,7 @@
       padding: 0 3rem;
     }
     @media @desktop {
-      padding: 0 4rem;
+      padding: 0 1.5rem;
     }
   }
 }
