--- a/src/index.less
+++ b/src/index.less
@@ -9,15 +9,15 @@
 @import "~nav-frontend-paneler-style";
 @import "~nav-frontend-lenker-style";
 
-@import "./js/components/Icon/Icon.less";
-@import "./less/components/adresse.less";
-@import "./less/components/app.less";
-@import "./less/components/header.less";
-@import "./less/components/box.less";
-@import "./less/components/links.less";
-@import "./less/components/alternativer.less";
-@import "./less/components/panel.less";
-@import "./less/components/footer-info.less";
-@import "./less/components/alertstripe.less";
-@import "./less/components/meny.less";
-@import "./less/components/brodsmulesti.less";
+@import "./App.less";
+@import "./sections/02-brodsmulesti/Brodsmulesti.less";
+@import "./sections/03-header/Header.less";
+@import "./sections/04-personinfo/adresser/Adresser.less";
+@import "./sections/06-eksterne/EksterneLenker.less";
+@import "./sections/07-alternativer/Alternativer.less";
+
+@import "./components/box/Box.less";
+@import "./components/icon/Icon.less";
+@import "./components/footer/Footer.less";
+@import "./components/error/Error.less";
+@import "./components/meny/Meny.less";
