Kilde i egen komponent + refaktor

--- a/src/index.less
+++ b/src/index.less
@@ -19,5 +19,6 @@
 @import "./components/box/Box.less";
 @import "./components/icon/Icon.less";
 @import "./components/footer/Footer.less";
+@import "./components/kilde/Kilde.less";
 @import "./components/error/Error.less";
 @import "./components/meny/Meny.less";
