Legg til mobilvisning på kilder

--- a/src/components/kilde/Kilde.less
+++ b/src/components/kilde/Kilde.less
@@ -5,5 +5,8 @@
     display: flex;
     align-items: baseline;
     justify-content: space-between;
+    @media @mobile {
+      flex-direction: column;
+    }
   }
 }
