--- a/src/index.less
+++ b/src/index.less
@@ -13,6 +13,7 @@
 @import "./sections/02-brodsmulesti/Brodsmulesti.less";
 @import "./sections/03-header/Header.less";
 @import "./sections/04-personinfo/adresser/Adresser.less";
+@import "./sections/04-personinfo/personalia/Personalia.less";
 @import "./sections/06-eksterne/EksterneLenker.less";
 @import "./sections/07-alternativer/Alternativer.less";
 
