Restruktur + redesign adresser

--- a/src/sections/4-personinfo/adresser/Adresser.less
+++ b/src/sections/4-personinfo/adresser/Adresser.less
@@ -1,5 +1,13 @@
 .addresse {
   &__box {
-    padding: 2rem 0 0 0;
+  }
+  &__tittel {
+    padding: 0 0 0.5rem 0;
+  }
+  &__lesmer {
+    padding: 0;
+  }
+  &__linje {
+    width: 100%;
   }
 }
