--- a/src/components/box/Box.less
+++ b/src/components/box/Box.less
@@ -41,8 +41,9 @@
 
   &__linje-bred {
     border: 0.5px solid black;
-    width: 75%;
-    margin-top: 2rem;
+    width: 90%;
+    opacity: 0.5;
+    margin: 2rem auto;
   }
 
   &__content {
