--- a/src/components/box/Box.less
+++ b/src/components/box/Box.less
@@ -1,7 +1,7 @@
 .box {
   @media @desktop {
     margin: 3rem 0 3rem 0;
-    padding: 2rem 3rem;
+    padding: 2rem 3rem 3rem 3rem;
     display: flex;
   }
 
@@ -43,7 +43,7 @@
     border: 0.5px solid black;
     width: 90%;
     opacity: 0.5;
-    margin: 2rem auto;
+    margin: 1.4rem auto;
   }
 
   &__content {
