--- a/src/sections/4-personinfo/adresser/Adresser.less
+++ b/src/sections/4-personinfo/adresser/Adresser.less
@@ -1,5 +1,10 @@
 .addresse {
   &__box {
+    .addresse__lesmer {
+      .lesMerPanel__toggle {
+        justify-content: flex-start;
+      }
+    }
   }
   &__tittel {
     padding: 0 0 0.5rem 0;
