--- a/src/index.less
+++ b/src/index.less
@@ -20,6 +20,7 @@
 
 @import "./components/box/Box.less";
 @import "./components/icon/Icon.less";
+@import "./components/message/Message.less";
 @import "./components/footer/Footer.less";
 @import "./components/kilde/Kilde.less";
 @import "./components/error/Error.less";
