--- a/src/components/error/Error.less
+++ b/src/components/error/Error.less
@@ -1,3 +1,9 @@
+.error {
+  &__container {
+    padding: 1rem 0;
+  }
+}
+
 .alertstripe {
   background-color: rgb(255, 255, 255);
   padding: 1rem;
