Redesign kilde og eksterne lenker

--- a/src/components/box/Box.less
+++ b/src/components/box/Box.less
@@ -119,8 +119,7 @@
 
 //midlertidig inntil avklaring
 .information-circle {
-  float: right;
-  padding: 0;
+  margin: 0 0.5rem;
   border: none;
   background: none;
 }
@@ -148,32 +147,6 @@
   .info-content {
     text-align: center;
     margin-bottom: 2rem;
-  }
-}
-
-.linkbox {
-  &__container {
-    display: flex;
-    flex-flow: row;
-    background: white;
-    margin: 1rem 0;
-
-    @media @tablet {
-      padding: 1.5rem 1rem;
-    }
-
-    @media @desktop {
-      padding: 2rem 3rem;
-    }
-  }
-
-  &__content {
-    @media @tablet {
-      padding: 0 3rem;
-    }
-    @media @desktop {
-      padding: 0 1.5rem;
-    }
   }
 }
 
