--- a/src/components/kilde/Kilde.less
+++ b/src/components/kilde/Kilde.less
@@ -4,9 +4,14 @@
     margin-top: 1rem;
     display: flex;
     align-items: baseline;
-    justify-content: space-between;
     @media @mobile {
       flex-direction: column;
+    }
+  }
+  &__seksjon {
+    width: 50%;
+    @media @mobile {
+      width: 100%;
     }
   }
 }
