--- a/src/index.less
+++ b/src/index.less
@@ -19,6 +19,7 @@
 @import "./sections/7-alternativer/Alternativer.less";
 
 @import "./components/box/Box.less";
+@import "./components/linkbox/LinkBox.less";
 @import "./components/icon/Icon.less";
 @import "./components/message/Message.less";
 @import "./components/footer/Footer.less";
