--- a/src/sections/7-alternativer/Alternativer.less
+++ b/src/sections/7-alternativer/Alternativer.less
@@ -1,14 +1,27 @@
 @boxwidth: 85%;
 @iconwidth: 15%;
 
-.AlternativesBox {
-  padding: 2rem 0 2rem 0;
-  width: 100%;
-  min-height: 200px;
+.alternativ-panel {
+  margin-top: 0.25rem;
 }
 
-.alternativ-panel {
-  margin-top: 5px;
+.ekspanderbartPanel__hode {
+  min-height: 5rem;
+}
+
+.alternativer {
+  &__tittel-container {
+    display: flex;
+    justify-content: center;
+    margin: 1rem 0;
+  }
+
+  &__box {
+    padding: 2rem 0 2rem 0;
+    margin-bottom: 4rem;
+    width: 100%;
+    min-height: 200px;
+  }
 }
 
 .print-panel {
