--- a/src/components/icon/Icon.less
+++ b/src/components/icon/Icon.less
@@ -10,6 +10,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 60%;
   }
 
   &__container {
