Fjern mobilvisning av boksene

--- a/src/index.less
+++ b/src/index.less
@@ -9,6 +9,8 @@
 @import "~nav-frontend-lesmerpanel-style";
 @import "~nav-frontend-chevron-style";
 @import "~nav-frontend-lenker-style";
+@import "~nav-frontend-veileder-style";
+@import "~nav-frontend-veilederpanel-style";
 
 @import "./App.less";
 @import "./sections/2-brodsmulesti/Brodsmulesti.less";
