--- a/src/components/icon/Icon.less
+++ b/src/components/icon/Icon.less
@@ -19,6 +19,7 @@
     display: flex;
     vertical-align: center;
     justify-content: center;
+    padding: 0 1.5rem 0 0;
 
     @media @tablet {
       display: none;
