--- a/src/components/linkbox/LinkBox.less
+++ b/src/components/linkbox/LinkBox.less
@@ -1,16 +1,10 @@
 .linkbox {
-  &__container {
+  &__rad {
     display: flex;
-    flex-flow: row;
-    background: white;
-    margin: 0.25rem 0;
+    display: flex-end;
 
-    @media @tablet {
-      padding: 1.5rem 1rem;
-    }
-
-    @media @desktop {
-      padding: 1.75rem 3rem;
+    @media @mobile {
+      flex-direction: column;
     }
   }
 
@@ -24,12 +18,16 @@
   }
 
   &__content {
-    display: flex;
     width: 100%;
-    padding: 0 1.5rem;
+    display: flex;
+    flex-direction: column;
   }
   &__seksjon {
     width: 50%;
     margin: 0 1rem 0 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-start;
   }
 }
