--- a/src/index.less
+++ b/src/index.less
@@ -11,6 +11,7 @@
 @import "~nav-frontend-lenker-style";
 @import "~nav-frontend-veileder-style";
 @import "~nav-frontend-veilederpanel-style";
+@import "~nav-frontend-lenkepanel-style";
 
 @import "./App.less";
 @import "./sections/2-brodsmulesti/Brodsmulesti.less";
