Legg til tekst i headeren

--- a/src/sections/3-header/Header.less
+++ b/src/sections/3-header/Header.less
@@ -27,13 +27,8 @@
     padding: 2rem 0 3rem 0;
   }
 
-  &__content-intro {
-    padding: 2rem 0 1rem 0;
-  }
-
-  &__content-description {
-    font-size: 1.2rem;
-    font-weight: normal;
+  &__content-seksjon {
+    padding: 1.25rem 0 0 0;
   }
 
   &__icon-mobile {
