--- a/src/components/icon/Icon.less
+++ b/src/components/icon/Icon.less
@@ -21,7 +21,7 @@
     justify-content: center;
     padding: 0 1.5rem 0 0;
 
-    @media @tablet {
+    @media @mobile {
       display: none;
     }
   }
