--- a/src/components/box/Box.less
+++ b/src/components/box/Box.less
@@ -3,7 +3,6 @@
     display: flex;
     flex-flow: row;
     background: white;
-    padding: 1.5rem 2rem;
 
     @media @tablet {
       padding: 1.5rem 2rem;
@@ -14,8 +13,22 @@
     }
   }
 
+  &__icon-container {
+    @media @tablet {
+      width: 100%;
+      position: absolute;
+      display: none;
+      top: -2em;
+      left: 0;
+    }
+  }
+
   &__content-container {
     width: 100%;
+
+    @media @tablet {
+      padding: 1.75rem 0;
+    }
   }
 
   &__header {
@@ -26,6 +39,7 @@
   &__header > * {
     margin: 0.4rem 0;
   }
+
   &__ingress {
     max-width: 100%;
   }
@@ -72,48 +86,8 @@
       }
     }
 
-    ul.list-column-1 li {
-      width: 100%;
-    }
-
     ul.list-column-2 li {
       width: 50%;
-      @media @mobile {
-        width: 100%;
-      }
-    }
-
-    ul.list-column-2.address-columns {
-      li:nth-child(1) {
-        order: 1;
-      }
-
-      li:nth-child(2) {
-        order: 3;
-      }
-
-      li:nth-child(3) {
-        order: 5;
-      }
-
-      li:nth-child(4) {
-        order: 2;
-      }
-
-      li:nth-child(5) {
-        order: 4;
-      }
-    }
-
-    ul.list-column-3 li {
-      width: 33%;
-      @media @mobile {
-        width: 100%;
-      }
-    }
-
-    ul.list-column-4 li {
-      width: 25%;
       @media @mobile {
         width: 100%;
       }
