Flytt ikonet inn i boksen og fjern bakgrunn

--- a/src/components/box/Box.less
+++ b/src/components/box/Box.less
@@ -14,12 +14,8 @@
   }
 
   &__icon-container {
-    @media @tablet {
-      width: 100%;
-      position: absolute;
-      display: none;
-      top: -2em;
-      left: 0;
+    @media @desktop {
+      padding: 0 1.5rem 0 0;
     }
   }
 
