--- a/src/components/linkbox/LinkBox.less
+++ b/src/components/linkbox/LinkBox.less
@@ -12,6 +12,10 @@
     margin: 0 0 0.6rem 0;
   }
 
+  &__icon-container {
+    padding: 0 1.5rem 0 0;
+  }
+
   &__lenke-container {
     display: flex;
     align-items: center;
