--- a/src/App.less
+++ b/src/App.less
@@ -13,7 +13,7 @@ body {
   }
 }
 
-main {
+.app {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -37,7 +37,11 @@ main {
   }
 }
 
-.Content {
+.pagewrapper {
+  width: 100%;
+}
+
+.content {
   width: 100%;
   max-width: 800px;
   padding: 0 0.2em;
