--- a/src/index.less
+++ b/src/index.less
@@ -22,6 +22,8 @@
 @import "./sections/6-eksterne/EksterneLenker.less";
 @import "./sections/7-informasjon/MerInformasjon.less";
 
+@import "./pages/detaljert-arbeidsforhold/DetaljertArbeidsforhold";
+
 @import "./components/box/Box.less";
 @import "./components/linkbox/LinkBox.less";
 @import "./components/icon/Icon.less";
