--- a/src/pages/detaljert-arbeidsforhold/DetaljertArbeidsforhold.less
+++ b/src/pages/detaljert-arbeidsforhold/DetaljertArbeidsforhold.less
@@ -2,6 +2,10 @@
   &__container {
     width: 100%;
   }
+  &__icon {
+    display: flex;
+    justify-content: center;
+  }
   &__innhold {
     background: white;
     padding: 2rem;
