Tittel på detaljert visning

--- a/src/pages/detaljert-arbeidsforhold/DetaljertArbeidsforhold.less
+++ b/src/pages/detaljert-arbeidsforhold/DetaljertArbeidsforhold.less
@@ -7,4 +7,15 @@
     padding: 2rem;
     margin: 1rem 0;
   }
+  &__rad {
+    display: flex;
+    justify-content: space-between;
+    align-content: baseline;
+  }
+  &__filler,
+  &__back {
+    width: 100px;
+    display: flex;
+    align-items: flex-end;
+  }
 }
