--- a/src/pages/forside/sections/2-brodsmulesti/Brodsmulesti.less
+++ b/src/pages/forside/sections/2-brodsmulesti/Brodsmulesti.less
@@ -7,11 +7,17 @@
   font-size: 1rem;
   line-height: 1.375rem;
   font-weight: 400;
+  min-height: 45px;
   margin: 0.5rem 0;
 
   &__account {
     width: 30px;
     height: 30px;
+  }
+  &__icon {
+    @media @mobile {
+      display: none;
+    }
   }
 
   > * {
