Fungerende ditt-nav-kontor

--- a/src/index.less
+++ b/src/index.less
@@ -27,6 +27,7 @@
 
 @import "./components/box/Box.less";
 @import "./components/linkbox/LinkBox.less";
+@import "./components/apningstid/Apningstid.less";
 @import "./components/icon/Icon.less";
 @import "./components/melding/Melding.less";
 @import "./components/kilde/Kilde.less";
