--- a/public/index.css
+++ b/public/index.css
@@ -1225,6 +1225,19 @@ body .capitalize {
 .underseksjon__beskrivelse {
   padding: 1rem 0 0 0;
 }
+.dittnavkontor__header {
+  margin: 1rem 0 2rem 0;
+}
+.dittnavkontor__ingress {
+  display: flex;
+  margin-bottom: 1rem;
+}
+.dittnavkontor__ingress > * {
+  margin-right: 0.25rem;
+}
+.dittnavkontor__footer {
+  margin-top: 2rem;
+}
 .arbeidsforhold {
   padding: 1rem 0 0 0;
 }
@@ -1430,6 +1443,25 @@ body .capitalize {
   .linkbox__seksjon {
     width: 100%;
   }
+}
+.apningstid__container {
+  margin: 0.75rem 0;
+}
+.apningstid__row {
+  display: flex;
+  padding: 0.5rem 0;
+  border-bottom: 1px solid #3e3832;
+}
+@media all and (max-width: 420px) {
+  .apningstid__row {
+    flex-direction: column;
+  }
+}
+.apningstid__row:first-child {
+  border-top: 1px solid black;
+}
+.apningstid__column {
+  flex-basis: 100%;
 }
 .icon {
   width: 100%;
