--- a/src/components/apningstid/Apningstid.less
+++ b/src/components/apningstid/Apningstid.less
@@ -8,6 +8,10 @@
     padding: 0.5rem 0;
     border-bottom: 1px solid #3e3832;
 
+    @media @desktop {
+      align-items: center;
+    }
+
     @media @mobile {
       flex-direction: column;
     }
@@ -18,6 +22,17 @@
   }
 
   &__column {
-    flex-basis: 100%;
+    margin-right: 1rem;
+  }
+
+  &__dag {
+    width: 25%;
+  }
+
+  &__tidspunkt {
+    width: 35%;
+  }
+  &__kommentar {
+    width: 65%;
   }
 }
