--- a/src/components/box/Box.less
+++ b/src/components/box/Box.less
@@ -1,16 +1,28 @@
 .box {
   &__container {
+    padding-top: 1.5rem;
+  }
+
+  &__title-container {
     display: flex;
-    flex-flow: row;
-    background: white;
+    justify-content: center;
+  }
 
-    @media @tablet {
-      padding: 1.5rem 2rem;
-    }
+  &__title-i-icon,
+  &__title-filler {
+    min-width: 2rem;
+    max-width: 2rem;
+    margin: 0 1rem;
+  }
 
+  &__modal {
     @media @desktop {
-      padding: 1.75rem 3rem;
+      max-width: 50%;
     }
+  }
+
+  &__title-i-icon {
+    cursor: pointer;
   }
 
   &__icon-container {
