--- a/src/index.less
+++ b/src/index.less
@@ -9,6 +9,8 @@
 @import "~nav-frontend-lesmerpanel-style";
 @import "~nav-frontend-chevron-style";
 @import "~nav-frontend-lenker-style";
+@import "~nav-frontend-lukknapp-style";
+@import "~nav-frontend-modal-style";
 @import "~nav-frontend-veileder-style";
 @import "~nav-frontend-veilederpanel-style";
 @import "~nav-frontend-lenkepanel-style";
