Legg inn modal for DKIF beskrivelse

--- a/src/index.less
+++ b/src/index.less
@@ -20,6 +20,7 @@
 @import "pages/forside/sections/3-header/Header.less";
 @import "pages/forside/sections/4-personinfo/adresser/Adresser.less";
 @import "pages/forside/sections/4-personinfo/personalia/Personalia.less";
+@import "pages/forside/sections/4-personinfo/kontakt-informasjon/subsections/DKIF.less";
 @import "pages/forside/sections/4-personinfo/ditt-nav-kontor/DittNavKontor.less";
 @import "pages/forside/sections/5-arbeidsforhold/Arbeidsforhold.less";
 @import "pages/forside/sections/6-eksterne/EksterneLenker.less";
