--- a/src/components/box/Box.less
+++ b/src/components/box/Box.less
@@ -1,6 +1,10 @@
+.nav-veileder__frame {
+  background: transparent !important;
+}
+
 .box {
   &__container {
-    padding-top: 1.5rem;
+    padding-top: 1rem;
   }
 
   &__title-container {
@@ -11,9 +15,13 @@
 
   &__title-i-icon,
   &__title-filler {
-    min-width: 2rem;
-    max-width: 2rem;
+    min-width: 1.5rem;
+    max-width: 1.5rem;
     margin: 0 1rem;
+  }
+
+  &__ikon {
+    width: 72.5% !important;
   }
 
   &__modal {
@@ -46,19 +54,11 @@
   }
 
   &__header > * {
-    margin: 0.4rem 0;
+    margin-bottom: 0.4rem;
   }
 
   &__ingress {
     max-width: 100%;
-  }
-
-  &__icon {
-    width: 4rem;
-    height: 4rem;
-    @media @mobile {
-      visibility: hidden;
-    }
   }
 
   &__linje-smal {
