Implementer henting av fornavn fra auth

--- a/src/components/box/Box.less
+++ b/src/components/box/Box.less
@@ -3,8 +3,12 @@
 }
 
 .box {
-  &__container {
+  &__wrapper {
     padding-top: 1rem;
+  }
+
+  &__container {
+    padding: 0 2rem;
   }
 
   &__title-container {
